	clean ups to stream-line with ucspi-ssl.
	package/rts is working now.
20140107 (feh + John Levine)
	thanks to the bug report of John Levine some flaws were fixed
	which caused troubles in particular using C99 compilers.
20150128 (feh)
	fixed wrong nesting of warning output in case of IPv4 
	address bind in tcpclient (-4).
20160228 (feh)
	redone tcpserver's remotehost evaluation for flagparanoid 
	in case both A and AAAA records are present.
20160726 (feh)
	conf-* files are now in main dir.
20161120 (feh, bergmann)
	fix output for localip output in case of mappedv4.
	fix for poll + select handling in iopause.c (tx frank bergmann).
	Reference: https://sourceware.org/bugzilla/show_bug.cgi?id=13660
20170301 (feh)
	bugfix in rblsmtpd.c indicating IPv6 addresses for IPv6mapped 
	IPv4 addresses (tx. Sebastian).
20170617 (feh)
	convenience release: substituted 'gcc' by 'cc'.
20171101 (feh)
	Fixed bug in rblsmtpd which abends if no IP address is specified.
20180116
	Added OmniOS compatibility.
20180608
	Added colon ':' support for tcprules (tx. Bruce Guenter).
--------
20180827
	ucspi-tcp6-1.10 - complete new build upon fehQlibs.
	tcprules delimiter can be customized via #define DELIMITER in tcprules.c.
	Removed options '-4' and '-6' for shell scripts and fixed bugs.
	Native handling of IPv4 and IPv6 addresses for tcpclient.

20181109 (feh)
	Added socket_dualstack option for OS using IPv6_V6ONLY as default.
	fehQlibs-10 required.
20190127 (feh)
	Added support for parsing natively lines with ':' (colons) within
	environment variables for tcprules. 
	Fixed bug in tcprules abending with certain with IPv4/CIDR addresses.
	New installation PREFIX is now 'net' (and not 'host').
20190320 (feh)
	Added dual-stack capabilities for tcpserver applying the
  pseudo IP address ':0' on call (common now for all servers).
  Rewrote IPv4 CIDR address evaluation for rules.
  MacOS has already function wait -> waiter (in rblsmtpd).
  ucspi-tcp6-1.10.3

ucspi-tcp6 -- version: 1.10 post-beta.
